# qsolve

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: qsolvebench.rs
games/: README.md  gameofcrowns-1.txt  linkedin-1-empty.txt  linkedin-1-partial.txt  queensgame-1.txt
media/: README.md  li1-animate-delay.mov  li1-animate.mov
src/: board.rs  datastructure.rs  file.rs  heuristic.rs  image.rs  lib.rs  main.rs  share.rs  solveiter.rs  solvestate.rs  squarecolor.rs
tests/: all_strategies_solve.rs  command_line_runs.rs  reads_all_images.rs  reads_all_text_files.rs  solve_all_games.rs
