[package]
name = "qsolve"
version = "1.0.0"
authors = ["Dan Schafer <dan.schafer@gmail.com>"]
edition = "2024"
description = "A command-line tool for solving Queens puzzles"
documentation = "https://docs.rs/qsolve"
readme = "README.md"
repository = "https://github.com/dschafer/qsolve"
license = "MIT OR Apache-2.0"
keywords = ["Queens", "puzzle", "solver"]
categories = ["command-line-utilities"]
exclude = [
    "media/*",
    "games/*",
]

[badges]
maintenance.status = "as-is"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
crossterm = "0.29.0"
ctrlc = "3.4.6"
doc-comment = "0.3.3"
env_logger = "0.11.6"
image = "0.25.6"
itertools = "0.14.0"
log = "0.4.25"
owo-colors = "4.1.0"

[dev-dependencies]
assert_cmd = "2.0.17"
criterion = { version = "0.5", features = ["html_reports"] }
predicates = "3.1.3"
regex = "1.11.1"

[profile.release]
debug = true

[lib]
name = "qsolve"
path = "src/lib.rs"

[[bin]]
name = "qsolve"
path = "src/main.rs"

[[bench]]
name = "qsolvebench"
harness = false
